...
                            <constraint firstItem="X3v-Ns-I1D" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="MSI-55-nMP"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="X3v-Ns-I1D" secondAttribute="bottom" id="TiO-b2-88P"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="X3v-Ns-I1D" secondAttribute="trailing" id="ynL-fX-59R"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="Euu-ry-DLG">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus.app" catalog="system" id="2CV-Ce-iVr">
                            <connections>
                                <action selector="addButtonClicked:" destination="BYZ-38-t0r" id="1w8-ga-PAQ"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
